[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/main/title/MenuScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/gray_panel_screws_stylebox.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -189.0
margin_top = -400.0
margin_right = 189.0
margin_bottom = -39.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 328.0
margin_bottom = 336.0
custom_constants/margin_top = 15
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 50.0
margin_top = 42.0
margin_right = 278.0
margin_bottom = 258.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnlineButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 228.0
margin_bottom = 51.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Battle!"

[node name="LocalButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 55.0
margin_right = 228.0
margin_bottom = 106.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Practice"

[node name="SettingsButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 110.0
margin_right = 228.0
margin_bottom = 161.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Settings"

[node name="CreditsButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 165.0
margin_right = 228.0
margin_bottom = 216.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Credits"

[node name="Exit" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 165.0
margin_right = 228.0
margin_bottom = 216.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Exit"
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
